force-app/main/default/objects/Apttus__Locale__c/Apttus__Locale__c.object-meta.xml
<CustomObject>
    <description>Provides locale support for templates</description>
    <label>Template Locale</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>