force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__DefaultDateFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultDateFormat__c</fullName>
    <label>Default Date Format</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__LocaleCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dd MMM yyyy</fullName>
            </value>
            <value>
                <fullName>dd/MM/yyyy</fullName>
            </value>
            <value>
                <fullName>dd/MM/yy</fullName>
            </value>
            <value>
                <fullName>d/M/yy</fullName>
            </value>
            <value>
                <fullName>d.M.yy</fullName>
            </value>
            <value>
                <fullName>yyyy-MM-dd</fullName>
            </value>
            <value>
                <fullName>dd MMMM yyyy</fullName>
            </value>
            <value>
                <fullName>d MMMM yyyy</fullName>
            </value>
            <value>
                <fullName>dddd, d MMMM yyyy</fullName>
            </value>
            <value>
                <fullName>dddd, dd MMMM yyyy</fullName>
            </value>
            <value>
                <fullName>d MMMM</fullName>
            </value>
            <value>
                <fullName>MMMM yyyy</fullName>
            </value>
            <value>
                <fullName>yyyy/MM/dd</fullName>
            </value>
            <value>
                <fullName>yy/MM/dd</fullName>
            </value>
            <value>
                <fullName>yy/M/d</fullName>
            </value>
            <value>
                <fullName>yyyy/M/d</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;M&apos;月&apos;d&apos;日&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MM&apos;月&apos;dd&apos;日&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;M&apos;月&apos;d&apos;日 &apos;dddd</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MM&apos;月&apos;dd&apos;日 &apos;dddd</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;d&apos;日&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;d&apos;日 &apos;dddd</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMMMd&apos;日&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMMMd&apos;日 &apos;dddd</fullName>
            </value>
            <value>
                <fullName>M月d日</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;M&apos;月&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMM&apos;月&apos;</fullName>
            </value>
            <value>
                <fullName>yyyy&apos;年&apos;MMMM</fullName>
            </value>
            <value>
                <fullName>yy-MM-dd</fullName>
            </value>
            <value>
                <fullName>M/dd/yy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>