force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__DefaultDateTimeFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultDateTimeFormat__c</fullName>
    <label>Default Date/Time Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>