force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__DefaultNumberPrecision__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultNumberPrecision__c</fullName>
    <description>Select Default Precision of Number fields.</description>
    <inlineHelpText>Select Default Precision of Number fields.</inlineHelpText>
    <label>Default Number Precision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>