force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__DefaultTimeFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultTimeFormat__c</fullName>
    <label>Default Time Format</label>
    <length>18</length>
    <type>Text</type>
</CustomField>