force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__LocaleCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LocaleCode__c</fullName>
    <label>Locale Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__LocaleName__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bg-BG</fullName>
            </value>
            <value>
                <fullName>de-CH</fullName>
            </value>
            <value>
                <fullName>de-DE</fullName>
            </value>
            <value>
                <fullName>el-GR</fullName>
            </value>
            <value>
                <fullName>en-CA</fullName>
            </value>
            <value>
                <fullName>en-CH</fullName>
            </value>
            <value>
                <fullName>en-GB</fullName>
            </value>
            <value>
                <fullName>en-IE</fullName>
            </value>
            <value>
                <fullName>en-PH</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
            <value>
                <fullName>es-ES</fullName>
            </value>
            <value>
                <fullName>es-PH</fullName>
            </value>
            <value>
                <fullName>fil-PH</fullName>
            </value>
            <value>
                <fullName>fr-CH</fullName>
            </value>
            <value>
                <fullName>gsw-CH</fullName>
            </value>
            <value>
                <fullName>hr-HR</fullName>
            </value>
            <value>
                <fullName>hu-HU</fullName>
            </value>
            <value>
                <fullName>it-CH</fullName>
            </value>
            <value>
                <fullName>it-IT</fullName>
            </value>
            <value>
                <fullName>ja-JP</fullName>
            </value>
            <value>
                <fullName>ko-KR</fullName>
            </value>
            <value>
                <fullName>nb-NO</fullName>
            </value>
            <value>
                <fullName>pl-PL</fullName>
            </value>
            <value>
                <fullName>pt-BR</fullName>
            </value>
            <value>
                <fullName>pt-CH</fullName>
            </value>
            <value>
                <fullName>rm-CH</fullName>
            </value>
            <value>
                <fullName>ru-RU</fullName>
            </value>
            <value>
                <fullName>sv-SE</fullName>
            </value>
            <value>
                <fullName>th-TH</fullName>
            </value>
            <value>
                <fullName>wae-CH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>