force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__LocaleName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LocaleName__c</fullName>
    <label>Locale Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English (United States)</fullName>
            </value>
            <value>
                <fullName>English (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>English (Canada)</fullName>
            </value>
            <value>
                <fullName>English (Ireland)</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Norwegian</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Greek (Greece)</fullName>
            </value>
            <value>
                <fullName>German (Switzerland)</fullName>
            </value>
            <value>
                <fullName>English (Switzerland)</fullName>
            </value>
            <value>
                <fullName>French (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Alsatian (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Italian (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Romansh (Switzerland)</fullName>
            </value>
            <value>
                <fullName>Walser (Switzerland)</fullName>
            </value>
            <value>
                <fullName>English (Republic of the Philippines)</fullName>
            </value>
            <value>
                <fullName>Spanish (Philippines)</fullName>
            </value>
            <value>
                <fullName>Filipino (Philippines)</fullName>
            </value>
            <value>
                <fullName>Bulgarian (Bulgaria)</fullName>
            </value>
            <value>
                <fullName>Croatian (Croatia)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>