force-app/main/default/objects/Apttus__Locale__c/fields/Apttus__UniqueLocaleName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__UniqueLocaleName__c</fullName>
    <label>Locale Name (Unique)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>